ゴミの日の縦書き表示を上詰めに変更

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             border: 3px solid #0f0;
             text-align: center;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
             height: calc(100vh - 40px);
             writing-mode: vertical-rl;
@@ -91,7 +91,7 @@
         }
 
         .station-info .station-name {
-            font-size: 50px;
+            font-size: 30px;
             font-weight: bold;
         }
 
