--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             color: #fff;
             font-weight: bold;
             border: 3px solid #0f0;
-            text-align: center;
-            display: flex;
-            align-items: flex-start;
-            justify-content: center;
+            /* text-align: center; */
+            /* display: flex; */
+            align-items: center;
+            /* justify-content: center; */
             height: calc(100vh - 40px);
             writing-mode: vertical-rl;
             text-orientation: upright;
@@ -143,7 +143,7 @@
 <body>
     <div class="atlanta-time" id="atlantaTime">
         <div class="label">🇺🇸 アトランタ</div>
-        <div class="time" id="atlantaTimeValue">--:--:--</div>
+        <div class="time" id="atlantaTimeValue">--:--</div>
     </div>
     <div class="station-info" id="stationInfo">
         <div class="station-name">阪急 梅田方面</div>
