見た目調整

--- a/index.html
+++ b/index.html
@@ -142,13 +142,14 @@
 </head>
 <body>
     <div class="atlanta-time" id="atlantaTime">
+        <div class="label">jp 日本</div>
+        <div class="time" id="currentTime">--:--</div>
         <div class="label">🇺🇸 アトランタ</div>
         <div class="time" id="atlantaTimeValue">--:--</div>
     </div>
     <div class="station-info" id="stationInfo">
         <div class="station-name">阪急 梅田方面</div>
         <div class="day-type" id="dayType">--ダイヤ</div>
-        <div class="current-time" id="currentTime">--:--:--</div>
         <div class="next-train" id="display">
             <span>読み込み中...</span>
         </div>
